tests/fixtures/valid/no_impl.etcm
spec OnlySpec:
  name: str
  retries: int = Field(default=1, gt=0)
