tests/fixtures/invalid/constraint_bound.etcm
spec Train:
  epochs: int = Field(gt=0)

impl default:
  epochs: 0
